# sharept-dl

./: .gitignore  MANIFEST.in  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  publish.yml
sharepoint_dl/: __init__.py  __main__.py  i18n.py
sharept_dl/: __init__.py  __main__.py  _version.py  cli.py  session.py  ui.py  utils.py
tests/: test_cli.py  test_i18n.py  test_session.py  test_utils.py
